# virtual-scene

./: CMakeLists.txt  Dockerfile  README.md
src/: MainWindow.cpp  MainWindow.hpp  Point.hpp  main.cpp
src/Objects/: Cube.cpp  Cube.hpp  Object.cpp  Object.hpp  Pyramid.cpp  Pyramid.hpp
