cmake_minimum_required(VERSION 3.5)

SET(PROJECTNAME virtual-scene)
PROJECT(${PROJECTNAME})

CMAKE_POLICY(SET CMP0072 NEW)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )

SET(CPPS src/main.cpp src/MainWindow.cpp src/Objects/Cube.cpp src/Objects/Object.cpp src/Objects/Pyramid.cpp)

ADD_EXECUTABLE(${PROJECTNAME} ${CPPS})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
